--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ async-trait = "0.1.38"
 [dev-dependencies]
 tokio = { version = "0.2.20", features = ["rt-threaded", "macros"] }
 futures = "0.3.5"
+dotenv = "0.15.0"
